change default start port to 8200 instead 4200

--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "build": "ember build",
     "lint:hbs": "ember-template-lint .",
     "lint:js": "eslint .",
-    "start": "ember serve",
+    "start": "ember server --port 8200",
     "test": "ember test"
   },
   "devDependencies": {
